Update  to the login Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="login">Login</string>
     <string name="last_name">Last Name</string>
     <string name="sign_up">Sign Up</string>
+    <string name="first_name">First name</string>
 
 
 </resources>
