--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="last_name">Last Name</string>
     <string name="sign_up">Sign Up</string>
     <string name="first_name">First name</string>
+    <string name="forgot_password">Forgot Password?</string>
 
 
 </resources>
