--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="sign_up">Sign Up</string>
     <string name="first_name">First name</string>
     <string name="forgot_password">Forgot Password?</string>
+    <string name="email_address">Email Address</string>
 
 
 </resources>
