Find my location update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="email_address">Email Address</string>
     <string name="chat_box">Chat Box</string>
-    <string name="chatter_box">Chatter Box</string>
+    <string name="title_activity_location">Map</string>
 
 
 </resources>
